<resources>
    <string name="app_name">Club Deportivo</string>
    <string name="txt_TituloLogin">Club Deportivo</string>
    <string name="txt_Usuario">Usuario</string>
    <string name="txt_Contraseña">Contraseña</string>
    <string name="txt_btn_Inicio">Iniciar sesion</string>
    <string name="txt_titRecuContra">Recuperar contraseña</string>
    <string name="txt_btn_volver">Volver</string>
    <string name="txt_mail">Correo electronico</string>
    <string name="txt_RecuperaContra02">Revise la casilla de su correo electronico
        para recuperar su contraseña</string>

    <!-- TEXTOS MENU -->
    <string name="txt_Tit_Menu">Menú Principal</string>
    <string name="txt_btn_RegistrarSocio">Registrar socio</string>
    <string name="txt_btn_Vencimientos">Vencimientos</string>
    <string name="txt_btn_Carnet">Entregar carnet</string>
    <string name="txt_btn_InscripcionAct">Inscripción en Actividad</string>
    <string name="txt_btn_CobrarCuota">Cobrar cuota</string>

    <!-- TEXTOS REGISTRO_SOCIO LAYOUT-->
    <string name="txt_Tit_Registro">Registrar Socio</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido">Apellido</string>
    <string name="hint_documento">Documento</string>
    <string name="hint_condicion">Condición</string>
    <string name="txt_btn_Registrar">Registrar</string>
    <string name="txt_btn_Limpiar">Limpiar</string>
    <string name="txt_btn_Cancelar">Cancelar</string>

    <!-- DropDown Items -->
    <string-array name="condicionesSocio">
        <item>Socio</item>
        <item>No Socio</item>
    </string-array>

    <!-- TEXTO ENTREGA CARNET -->
    <string name="txt_Tit_EntregaCarnet">Entrega de Carnet</string>
    <string name="txt_lbl_EntregaCarnet">Buscar socio por DNI</string>
    <string name="txt_lbl_IngreseDNICarnet">Ingrese el DNI del socio</string>
    <string name="txt_btn_Buscar">Buscar</string>

    <!-- TEXTO INSCRIPCION -->
    <string name="txt_Tit_Inscripcion">Inscripcion</string>
    <string name="txt_Tit_Inscripcion1">Ingrese numero de documento</string>
    <string name="txt_lbl_Inscripcion1">DNI</string>
    <string name="txt_Tit_Inscripcion2">Seleccione la actividad</string>
    <string name="txt_lbl_Inscripcion2">Actividad</string>
    <string name="btnRegistraSocioAct">Registrar</string>
    <string name="txt_btn_RealizarPago">Realizar pago</string>

    <!-- TEXTO VENCIMIENTOS -->
    <string name="txt_Tit_Vencimientos">Vencimientos</string>
    <string name="txt_lbl_Cuotas">Cuotas que vencen hoy</string>
    <string name="txt_btn_Emitir">Emitir</string>

    <!-- TEXTO CARNET -->
    <string name="txt_btn_ImprimirCarnet">Imprimir</string>
    <string name="txt_lbl_ClubDeportivo">Club Deportivo</string>
    <string name="txt_lbl_NroSocioCarnet">000</string>
    <string name="txt_lbl_NombreCarnet">Nombre Apellido</string>

    <!-- TEXTO COBRAR CUOTA -->
    <string name="txt_Tit_CobrarCuota">Cobrar Cuota</string>


    <!-- TEXTO COMPROBANTE PAGO -->
    <string name="txt_lbl_Comprobante">Comprobante de Pago</string>
    <string name="txt_lbl_FechaComprobante">Fecha: </string>
    <string name="txt_lbl_NombreComprobante">Nombre: </string>
    <string name="txt_lbl_NroSocioComprobante">Nro de Socio: </string>
    <string name="txt_lbl_ActividadesComprobante">Actividades Contratadas: </string>
    <string name="txt_lbl_ImporteComprobante">Importe Abonado: $</string>


</resources>