<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/campo_futbol_opa"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:id="@+id/lblTit_Menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/lexend_bold"
        android:text="@string/txt_Tit_Menu"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="14dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistrarSocio"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_btn_Registrar"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans"
            android:textSize="20sp"
            android:padding="10dp"
            app:backgroundTint="@color/botones"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEntregarCarnet"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_btn_Carnet"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            app:backgroundTint="@color/botones"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnInscripcionAct"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_btn_InscripcionAct"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            app:backgroundTint="@color/botones"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVencimientos"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_btn_Vencimientos"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            app:backgroundTint="@color/botones"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCobrarCuota"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_btn_CobrarCuota"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            app:backgroundTint="@color/botones"/>

    </LinearLayout>

</LinearLayout>