<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Inscripcion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/campo_futbol_opa"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".InscripcionSocioActividad01">

    <TextView
        android:id="@+id/lblTit_Inscripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/lexend_bold"
        android:text="@string/txt_Tit_Inscripcion"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="55sp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/txt_Tit_Inscripcion1"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lblDocumento"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/hint_documento">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/txt_Tit_Inscripcion2"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_inscripcion_actividad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="20dp"
                android:spinnerMode="dropdown" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEmitirInscripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans"
                android:padding="10dp"
                android:text="@string/txt_btn_Emitir"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/botones" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVolverInscripcionAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:baselineAligned="false"
        android:fontFamily="@font/open_sans"
        android:padding="10dp"
        android:text="@string/txt_btn_volver"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/botones" />

</LinearLayout>